--- a/foodie-mapper/pom.xml
+++ b/foodie-mapper/pom.xml
@@ -18,7 +18,7 @@
          -->
         <dependency>
             <groupId>com.imooc</groupId>
-            <artifactId>foodie-common</artifactId>
+            <artifactId>foodie-pojo</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
