--- a/foodie-api/src/main/resources/application.yml
+++ b/foodie-api/src/main/resources/application.yml
@@ -54,4 +54,4 @@ mybatis-plus:
       id-type: auto
   # 配置类型别名所对应的包
   # 处理Mapper.xml中的resultType，这样就可以直接使用类名作为别名，而不需要写全类名
-  type-aliases-package: com.imooc.pojo
+#  type-aliases-package: com.imooc.pojo
