BO 校验功能（1. 需要@Valid开启校验， 2.BindingResult result最好也放在@Valid参数后面， 3. 库spring-boot-starter-validation需要导入）

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,12 @@
             </exclusions>
         </dependency>
 
+        <!--  BO校验功能       -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
         <!-- 引入日志依赖：抽象层与实现层       -->
         <dependency>
             <groupId>org.slf4j</groupId>
