设置文件上传最大值500k，同时添加上传文件超过限制的异常处理

--- a/foodie-api/src/main/resources/application.yml
+++ b/foodie-api/src/main/resources/application.yml
@@ -32,7 +32,10 @@ spring:
       pool-name: DataSourceHikariCP   # 连接池名字
       max-lifetime: 1800000           # 连接的生命时长（毫秒），超时而且没被使用则被释放（retired），默认30分钟
       connection-test-query: SELECT 1 # 测试SQL
-
+  servlet:
+    multipart:
+      max-file-size: 51200            # 限制上传文件大小（500kb）
+      max-request-size: 51200         # 限制请求大小（500kb）
 
 ################################################################
 #
