添加Redis缓存，并且也添加了Token的验证和单点登录功能

--- a/foodie-api/src/main/resources/application.yml
+++ b/foodie-api/src/main/resources/application.yml
@@ -17,6 +17,8 @@ server:
 #
 ################################################################
 spring:
+  profiles:
+    active: dev,redis
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
