--- a/foodie-api/pom.xml
+++ b/foodie-api/pom.xml
@@ -15,10 +15,17 @@
         <!--
             api -> service -> mapper -> pojo -> common
             api可以使用service、pojo于common中相应的方法
-               -->
+        -->
         <dependency>
             <groupId>com.imooc</groupId>
             <artifactId>foodie-service</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        
+        <!-- 直接依赖common模块，因为要使用其中的工具类 -->
+        <dependency>
+            <groupId>com.imooc</groupId>
+            <artifactId>foodie-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
