--- a/foodie-api/src/main/resources/application.yml
+++ b/foodie-api/src/main/resources/application.yml
@@ -13,27 +13,12 @@ server:
 
 ################################################################
 #
-# 配置数据源信息
+# 配置文件激活
 #
 ################################################################
 spring:
   profiles:
-    active: dev,redis
-  datasource:
-    type: com.zaxxer.hikari.HikariDataSource
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/foodie?serverTimezone=GMT%2B8&characterEncoding=utf8&useSSL=false
-    username: root
-    password: qianli01
-    hikari:
-      connection-timeout: 30000       # 等待连接池分配连接的最大时长（毫秒），超过这个时长还没可用的连接则发生SQLException， 默认30秒
-      minimum-idle: 5                 # 最小连接数
-      maximum-pool-size: 20           # 最大连接数
-      auto-commit: true               # 自动提交
-      idle-timeout: 600000            # 连接超时的最大时长（毫秒），超时则被释放（retired），默认10分钟
-      pool-name: DataSourceHikariCP   # 连接池名字
-      max-lifetime: 1800000           # 连接的生命时长（毫秒），超时而且没被使用则被释放（retired），默认30分钟
-      connection-test-query: SELECT 1 # 测试SQL
+    active: prod,redis   # 切换到生产环境
   servlet:
     multipart:
       max-file-size: 51200            # 限制上传文件大小（500kb）
