生产数据库连接更新

--- a/foodie-api/src/main/resources/application-prod.yml
+++ b/foodie-api/src/main/resources/application-prod.yml
@@ -8,7 +8,7 @@ spring:
     type: com.zaxxer.hikari.HikariDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://10.1.12.5:3306/foodie?serverTimezone=GMT%2B8&characterEncoding=utf8&useSSL=false
-    username: root
+    username: liven
     password: Zxc112211
     hikari:
       connection-timeout: 30000
