创建文章页面：新增创建专栏功能

--- a/foodie-api/src/main/resources/application.yml
+++ b/foodie-api/src/main/resources/application.yml
@@ -18,7 +18,7 @@ server:
 ################################################################
 spring:
   profiles:
-    active: prod,redis   # 切换到生产环境
+    active: uat,redis   # 切换到生产环境
   servlet:
     multipart:
       max-file-size: 51200            # 限制上传文件大小（500kb）
@@ -38,9 +38,8 @@ mybatis-plus:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl  # 打印sql语句
   global-config:
     db-config:
-      # 配置主键策略：数据库自增（默认是雪花算法：ASSIGN_ID）
-      # 雪花算法更适合分布式系统，但是在单体应用中，数据库自增更方便
-      id-type: ASSIGN_UUID
+      # 配置主键策略：数据库自增
+      id-type: AUTO
   # 配置类型别名所对应的包
   # 处理Mapper.xml中的resultType，这样就可以直接使用类名作为别名，而不需要写全类名
 #  type-aliases-package: com.imooc.pojo
