--- a/pom.xml
+++ b/pom.xml
@@ -224,6 +224,12 @@
             <version>9.31</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.apple.itunes.storekit</groupId>
+            <artifactId>app-store-server-library</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
